# mjanowiak_neo4j_genaiapps

./: .gitignore  README.md  pyproject.toml
notebooks/: starwars_neo4j_chat-juypter.ipynb  starwars_neo4j_chat.ipynb
src/: agent.py
