[project]
name = "mjanowiak-neo4j-genaiapps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "kaggle>=2.0.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.8.0",
    "langchain-openai>=1.1.10",
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "yfiles-jupyter-graphs-for-neo4j>=1.7.0",
]
